# cog

./: .gitignore  Cargo.toml  README.md
crates/interpret/src/: lib.rs  object.rs
crates/lexer/src/: lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lib.rs
examples/: fibonacci.cog  fizzbuzz.cog  pipes.cog
src/: main.rs  repl.rs
src/crates/interpret/: Cargo.toml
src/crates/interpret/src/: lib.rs
src/crates/lexer/src/: lib.rs  token.rs
src/crates/parser/src/: lib.rs
src/interpret/src/: env.rs  lib.rs  object.rs
src/lexer/: Cargo.toml
src/lexer/src/: lib.rs  token.rs
src/parser/src/: ast.rs  lib.rs
