[package]
name = "cog"
version = "0.1.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"src/crates/lexer",
	"src/crates/parser",
	"src/crates/interpret"
]

[dependencies]
lexer = { path = "src/crates/lexer" }
parser = { path = "src/crates/parser" }
interpret = { path = "src/crates/interpret" }
rustyline = "8.0.0"
