[package]
name = "cog"
version = "0.1.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"crates/lexer",
	"crates/parser",
	"crates/interpret"
]

[dependencies]
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
interpret = { path = "crates/interpret" }
rustyline = "8.0.0"
